<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.fjj</groupId>
    <artifactId>template</artifactId>
    <version>0.0.1</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <netty.version>4.1.59.Final</netty.version>
        <slf4j.version>1.7.30</slf4j.version>
        <logback.version>1.3.0-alpha5</logback.version>
        <guava.version>30.1-jre</guava.version>
        <httpclient.version>4.5.13</httpclient.version>
        <protobuf.version>3.11.4</protobuf.version>
        <protoc.path>src/main/proto</protoc.path>
        <redission.version>2.15.2</redission.version>
        <mongo.driver.version>3.12.8</mongo.driver.version>
        <fastjson.version>1.2.73</fastjson.version>
    </properties>


    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpclient.version}</version>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>${netty.version}</version>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-example</artifactId>
            <version>${netty.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>${protobuf.version}</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>org.slf4j</groupId>-->
        <!--            <artifactId>slf4j-simple</artifactId>-->
        <!--            <version>${slf4j.version}</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <!--==============================二维码生成用工具包==================================-->
        <!--        <dependency>-->
        <!--            <groupId>com.google.zxing</groupId>-->
        <!--            <artifactId>core</artifactId>-->
        <!--            <version>3.1.0</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>com.google.zxing</groupId>-->
        <!--            <artifactId>javase</artifactId>-->
        <!--            <version>3.1.0</version>-->
        <!--        </dependency>-->

        <!--==============================查看对象内存占用情况jol工具==============================-->
        <!--        <dependency>-->
        <!--            <groupId>org.openjdk.jol</groupId>-->
        <!--            <artifactId>jol-core</artifactId>-->
        <!--            <version>0.10</version>-->
        <!--        </dependency>-->

        <!--================================PDF处理工具包===================================-->
        <!--        <dependency>-->
        <!--            <groupId>com.itextpdf</groupId>-->
        <!--            <artifactId>itextpdf</artifactId>-->
        <!--            <version>5.5.13.2</version>-->
        <!--        </dependency>-->

        <!--==========================================================================================-->
        <!--        <dependency>-->
        <!--            <groupId>redis.clients</groupId>-->
        <!--            <artifactId>jedis</artifactId>-->
        <!--            <version>2.9.0</version>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.springframework.boot</groupId>-->
        <!--            <artifactId>spring-boot-starter-data-redis</artifactId>-->
        <!--        </dependency>-->
        <!--        &lt;!&ndash;redis依赖commons-pool 这个依赖一定要添加&ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.commons</groupId>-->
        <!--            <artifactId>commons-pool2</artifactId>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>org.redisson</groupId>
            <artifactId>redisson</artifactId>
            <version>${redission.version}</version>
        </dependency>

        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>${mongo.driver.version}</version>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.28</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.12</version>
            <!--            <scope>provided</scope>-->
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <!--        <extensions>-->
        <!--            <extension>-->
        <!--                <groupId>kr.motd.maven</groupId>-->
        <!--                <artifactId>os-maven-plugin</artifactId>-->
        <!--                <version>1.6.2</version>-->
        <!--            </extension>-->
        <!--        </extensions>-->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <!--                    <source>${java.version}</source>-->
                    <!--                    <target>${java.version}</target>-->
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- 自动编译proto生成java代码 -->
            <plugin>
                <groupId>org.xolstice.maven.plugins</groupId>
                <artifactId>protobuf-maven-plugin</artifactId>
                <version>0.5.1</version>
                <configuration>
                    <!--protobuf 协议文件的路径-->
                    <protoSourceRoot>src/main/proto</protoSourceRoot>
                    <!--输出java 文件的目标路径-->
                    <outputDirectory>src/main/java</outputDirectory>
                    <!--不必每次都清理输出目录-->
                    <clearOutputDirectory>false</clearOutputDirectory>
                    <temporaryProtoFileDirectory>${project.build.directory}/protoc-temp</temporaryProtoFileDirectory>
                    <!--protobuf 代码生成工具的路径-->
                    <protocExecutable>${protoc.path}/protoc.exe</protocExecutable>
                </configuration>
                <!--                <executions>-->
                <!--                    <execution>-->
                <!--                        <goals>-->
                <!--                            <goal>compile</goal>-->
                <!--                        </goals>-->
                <!--                    </execution>-->
                <!--                </executions>-->
            </plugin>
            <!-- 以antrun的形式，编译proto生成java代码 -->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-antrun-plugin</artifactId>-->
            <!--                <version>1.8</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>compile-protoc</id>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>run</goal>-->
            <!--                        </goals>-->
            <!--                        <configuration>-->
            <!--                            <target>-->
            <!--                                <exec executable="${protoc.path}" failonerror="true">-->
            <!--                                    <arg value="-I=src/main/protos"/>-->
            <!--                                    <arg value="&#45;&#45;java_out=src/main/java"/>-->
            <!--                                    <arg line="src/main/protos/*.proto"/>-->
            <!--                                </exec>-->
            <!--                            </target>-->
            <!--                            <sourceRoot>src/main/java</sourceRoot>-->
            <!--                        </configuration>-->

            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <!--使单元测试不受项目编译影响-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>